--- a/CopyEverythingOcr.Wpf/appsettings.json
+++ b/CopyEverythingOcr.Wpf/appsettings.json
@@ -1,10 +1,10 @@
 {
   "Settings": {
     "Ocr": {
-      "ApiKey": "d2823d19-536d-458a-aec6-d330fa7fb8f7",
+      "ApiKey": "",
       "SecretKey": "",
-      "OcrEndpointUrl": "https://ark.cn-beijing.volces.com/api/v3/chat/completions",
-      "OcrModelName": "doubao-1.5-vision-pro-250328"
+      "OcrEndpointUrl": "",
+      "OcrModelName": ""
     },
     "Hotkey": {
       "Key": "F1",
