完善设置窗口功能，支持OCR和热键配置的加载与保存；优化错误处理逻辑，确保应用程序在读取配置时能够正确处理异常；更新相关依赖项以支持JSON解析。

--- a/OmniGrab.Wpf/OmniGrab.Wpf.csproj
+++ b/OmniGrab.Wpf/OmniGrab.Wpf.csproj
@@ -7,6 +7,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
+    <!-- 如果需要完全禁用隐式项目项，可以取消注释下一行 -->
+    <!-- <EnableDefaultItems>false</EnableDefaultItems> -->
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,5 +23,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+
+  <!--ItemGroup>
+    <Page Include="Views\SettingsWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup-->
 
 </Project>
