--- a/OmniGrab.Wpf/OmniGrab.Wpf.csproj
+++ b/OmniGrab.Wpf/OmniGrab.Wpf.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
+    <PublicResXFileCodeGeneratorAccessModifier>Public</PublicResXFileCodeGeneratorAccessModifier>
     <!-- 如果需要完全禁用隐式项目项，可以取消注释下一行 -->
     <!-- <EnableDefaultItems>false</EnableDefaultItems> -->
   </PropertyGroup>
@@ -30,5 +31,15 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup-->
+
+  <ItemGroup>
+    <EmbeddedResource Update="StringResources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>StringResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <!-- StringResources.zh-CN.resx will be auto-included and associated -->
+    <!-- We might need to explicitly include it if auto-include is not working as expected -->
+    <!-- For now, relying on SDK default to pick up StringResources.zh-CN.resx -->
+  </ItemGroup>
 
 </Project>
